--- a/_config.yml
+++ b/_config.yml
@@ -101,8 +101,8 @@ author:
   keybase          :
   instagram        :
   impactstory      : 
-  lastfm           :
-  linkedin         : "https://www.linkedin.com/in/ben-cohen-wang-b8a81211a/"
+  lastfm           : 
+  linkedin         : "ben-cohen-wang-b8a81211a"
   orcid            : 
   pinterest        :
   soundcloud       :
